--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
   "license": "yes",
   "private": false,
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2"
   }
 }
