--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "marked": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
