--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
   "author": "som singh lodhi",
   "license": "yes",
   "private": false,
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
